# ESP32_C6_zigbee_human_presence

./: CHANGELOG.md  CMakeLists.txt  MILESTONE_HU_PRESENCE_ZIGBEE.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  idf_component.yml  presence_led.c  presence_led.h  telegram_notifier.c  telegram_notifier.h  zb_cli.c  zb_cli.h  zb_coordinator.c  zb_coordinator.h  zb_presence.c  zb_presence.h
